Version 1.11.2+dev:
 * Language and i18n:
   * Updated translations: Indonesian, Portuguese, Vietnamese
 * User interface:
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
 * Miscellaneous and bug fixes
   * Switched to git version control. Hosting moved to SourceForge
   * Improved: Autorevision based revision numbers in CMake.
   * Don't let petrified units reveal ambushers

Version 1.11.2:
 * Add-ons client:
   * Fixed bug #20518: identical add-ons titles not supported
   * Add a button to the Filter Options dialog to toggle all currently
     displayed add-on categories at once
 * AI:
   * Experimental Multiplayer AI
     * Improve recruitment, notably first turn choices and units with poison
       and charge
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
     * Fix bug when playing on maps with a turn limit
     * Fix bug handling regeneration
     * Minor improvements in switching between castles
     * Add healer support micro AI to improve healer use
     * Improved village capturing
     * Retreat badly injured units more effectively
   * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
     * This includes AIs for 7 different animal behaviors, bottleneck defense,
       2 different guardians and a coward, healer support, lurkers,
       messenger escort, patrol, protect and move a unit, and 2 alternative
       recruiting strategies.
     * Documentation at http://wiki.wesnoth.org/Micro_AIs
   * New leader_ignores_keep AI aspect that lets AI leader take part in the same
     AI moves as the non-leader units.
   * Rename passive_leader_shares_keep candidate action to leader_shares_keep.
     The old syntax still works for backward compatibility (for both CA and
     macros).
   * Fix minor bug in leader_shares_keep candidate action that occurred
     under some circumstances when the AI leader does not have full MP