@@ -8,6 +8,8 @@ Version 1.11.2+dev:
 
  * User interface:
    * Fixed a bug in the cursor positioning in some text entries (bug #17220).
+   * Change Difficulty checkbox in Load Game dialog gets disabled if change
+     in difficulty of a loading game won't take effect (bug #20381).
 
 
 Version 1.11.2:
